--- a/docs/notebooks/Autre/test.ipynb
+++ b/docs/notebooks/Autre/test.ipynb
@@ -17,6 +17,7 @@
     "- Mettre des \";\" à chaque fin d'instruction\n",
     "- Écrire en majuscules les commandes SQL comme \"CREATE\" ou \"INSERT\"\n",
     "- Comme pour Python écrire le texte entre \"**guillemets**\"\n",
+    "- Lorsque l'on joint deux tables, en cas de nom de données doublées, on utilise *ma_table*.*donnée*\n",
     "\n",
     "\n",
     "## 2- **Créer** une table :\n",
@@ -163,7 +164,44 @@
     "|-----|----------|\n",
     "| 22  |    1     |\n",
     "| 18  |    2     |\n",
-    "| 12  |    1     |"
+    "| 12  |    1     |\n",
+    "\n",
+    "\n",
+    "## 6 - **Joindre** des tables :\n",
+    "\n",
+    "### • Fonctionnement :\n",
+    "\n",
+    "- SELECT **x**, **y** FROM *ma_table* JOIN *autre_table* ON *condition*\n",
+    "\n",
+    "##### Les valeurs **x** de *ma_table* et **y** de mon *autre_table* seront affichées à l'aide de la commande **JOIN** qui joint les données de deux tables distinctes.\n",
+    "\n",
+    "##### La commande **ON** permet d'ajouter une condition selon laquelle les deux tables seront jointes\n",
+    "\n",
+    "### • Exemples d'utilisation :\n",
+    "\n",
+    "Avec la table *autre_table* :\n",
+    "|*I*|*J*|*K*|\n",
+    "|---|---|---|\n",
+    "| 1 | chaise | 18 |\n",
+    "| 2 | table | 22 |\n",
+    "| 3 | porte | 12 |\n",
+    "| 4 | fenêtre | 18 |\n",
+    "\n",
+    "Et la table *ma_table* :\n",
+    "|*X*|*Y*|*Z*|\n",
+    "|---|---|---|\n",
+    "| 1 | test | 18 |\n",
+    "| 2 | toto | 22 |\n",
+    "| 3 | titi | 12 |\n",
+    "| 4 | tutu | 18 |\n",
+    "\n",
+    "SELECT Y, J, Z FROM *ma_table* JOIN *autre_table* ON *ma_table*.Z = *autre_table*.K;\n",
+    "|*Y*|*J*|*Z*|\n",
+    "|---|---|---|\n",
+    "| test | chaise | 18 |\n",
+    "| toto | table | 22 |\n",
+    "| titi | porte | 12 |\n",
+    "| tutu | fenêtre  18 |"
    ]
   }
  ],
