--- a/docs/notebooks/Autre/test.ipynb
+++ b/docs/notebooks/Autre/test.ipynb
@@ -46,14 +46,14 @@
     "\n",
     "### • Commande :\n",
     "\n",
-    "- \"CREATE TABLE table(...);\"\n",
+    "- \"CREATE TABLE ma_table(...);\"\n",
     "\n",
     "\n",
     "## 3- **Insérer** des données dans ma table :\n",
     "\n",
     "### • Fonctionnement :\n",
     "\n",
-    "- INSERT INTO customers VALUES (\n",
+    "- INSERT INTO *ma_table* VALUES (\n",
     "\n",
     "    **1** (valeur attribuée à x), \n",
     "\n",
@@ -100,7 +100,7 @@
     "- \"x\" : la liste sera rangée par ordre croissant de la colonne x (on peut également ajouter **ASC** \\ DESC)\n",
     "- \"x\" **DESC** : la liste sera rangée par ordre décroissant de la colonne x\n",
     "\n",
-    "### • Exemples d'utilisations des ces commandes :\n",
+    "### • Exemples d'utilisations de ces commandes :\n",
     "\n",
     "SELECT *Y*, *Z* FROM *ma_table*;\n",
     "|*Y*|*Z*|\n",
@@ -129,7 +129,7 @@
     "\n",
     "### • Commande :\n",
     "\n",
-    "- SELECT *élément(s)* WHERE *condition* ORDER BY *ordre*\n",
+    "- SELECT *élément(s)* WHERE *condition* ORDER BY *ordre*;\n",
     "\n",
     "## 5 - **Agréger** les données d'une table :\n",
     "\n",
@@ -166,6 +166,8 @@
     "| 18  |    2     |\n",
     "| 12  |    1     |\n",
     "\n",
+    "### • Commande :\n",
+    "- SELECT *élément(s)* AS *nom nouvelle colonne* FROM *ma_table* WHERE *condition*;\n",
     "\n",
     "## 6 - **Joindre** des tables :\n",
     "\n",
@@ -177,7 +179,7 @@
     "\n",
     "##### La commande **ON** permet d'ajouter une condition selon laquelle les deux tables seront jointes\n",
     "\n",
-    "### • Exemples d'utilisation :\n",
+    "### • Exemple d'utilisation :\n",
     "\n",
     "Avec la table *autre_table* :\n",
     "|*I*|*J*|*K*|\n",
@@ -201,7 +203,52 @@
     "| test | chaise | 18 |\n",
     "| toto | table | 22 |\n",
     "| titi | porte | 12 |\n",
-    "| tutu | fenêtre  18 |"
+    "| tutu | fenêtre  18 |\n",
+    "\n",
+    "### • Commande :\n",
+    "\n",
+    "- SELECT *élément 1*, *élément 2*, ... FROM *ma_table* JOIN *autre_table* ON *condition*\n",
+    "\n",
+    "## 7 - **Mettre à jour** ou **supprimer** les données d'une table :\n",
+    "\n",
+    "### • Fonctionnement :\n",
+    "\n",
+    "- UPDATE *ma_table* SET *élément* WHERE *condition*;\n",
+    "\n",
+    "##### La commande **UPDATE** permet de mettre à jour un élément d'une table avec **SET** lorsqu'une condition est remplie (souvent une certaine ID).\n",
+    "\n",
+    "- DELETE FROM *ma_table* WHERE *condition*;\n",
+    "\n",
+    "##### La commande **DELETE** permet de supprimer tout les éléments répondant à la condition.\n",
+    "\n",
+    "### • Exemples d'utilisation :\n",
+    "\n",
+    "Avec la table *ma_table* :\n",
+    "|*X*|*Y*|*Z*|\n",
+    "|---|---|---|\n",
+    "| 1 | test | 18 |\n",
+    "| 2 | toto | 22 |\n",
+    "| 3 | titi | 12 |\n",
+    "| 4 | tutu | 18 |\n",
+    "\n",
+    "UPDATE *ma_table* SET Z = 15 WHERE X = 3;\n",
+    "|*X*|*Y*|*Z*|\n",
+    "|---|---|---|\n",
+    "| 1 | test | 18 |\n",
+    "| 2 | toto | 22 |\n",
+    "| 3 | titi | 15 |\n",
+    "| 4 | tutu | 18 |\n",
+    "\n",
+    "DELETE FROM *ma_table* WHERE Z = 18;\n",
+    "|*X*|*Y*|*Z*|\n",
+    "|---|---|---|\n",
+    "| 2 | toto | 22 |\n",
+    "| 3 | titi | 15 |\n",
+    "\n",
+    "### • Commande :\n",
+    "\n",
+    "- UPDATE *ma_table* SET *élément* WHERE *condition*;\n",
+    "- DELETE FROM *ma_table* WHERE *condition*;"
    ]
   }
  ],
