--- a/docs/notebooks/Autre/memo_SQL.ipynb
+++ b/docs/notebooks/Autre/memo_SQL.ipynb
@@ -90,11 +90,26 @@
     "- \"Y\" : affiche une colonne en particulier (ou plusieurs avec \",\")\n",
     "\n",
     "##### Il existe également la commande \"**WHERE**\" qui permet d'ajouter une condition à ce qui est affiché :\n",
-    "- SELECT **x** FROM *ma_table* WHERE **y**\n",
+    "- SELECT *élément(s)* FROM *ma_table* WHERE **x**\n",
     "\n",
-    "##### **y** peut être remplacé par diverses conditions qui peuvent être acumulées avec **AND** :\n",
-    "- \"z **>=**/**<=**/**=** *10*\" : affiche tout les éléments dont le z est supérieur/inférieur/égal à *10* (\"**=**\" fonctionne également avec le texte)\n",
-    "- \"y **IN** (\"test\", \"testt\", ...) : affiche tout les éléments dont y contient \"test\" ou \"testt\"\n",
+    "##### **x** peut être remplacé par diverses conditions qui peuvent être acumulées avec **AND** et inversées avec **NOT** :\n",
+    "- \"=\" : affiche les éléments égaux (fonctionne également avec le texte)\n",
+    "- \"!=\" : affiche les éléments différents (fonctionne également avec le texte)\n",
+    "- \">\" : affiche les éléments supérieurs\n",
+    "- \"<\" : affiche les éléments inférieurs\n",
+    "- \">=\" : affiche les éléments supérieurs ou égaux\n",
+    "- \"<=\" : affiche les éléments inférieurs ou égaux\n",
+    "- IS NULL : affiche les éléments qui ont une valeur nulle (vide)\n",
+    "- \"x **IN** (\"test\", \"toto\", ...) : affiche tout les éléments dont x contient \"test\" ou \"toto\"\n",
+    "\n",
+    "##### Ainsi que **WHERE LIKE** qui permet de rechercher selon un modèle :\n",
+    "- SELECT *élément(s)* FROM *ma_table* WHERE **x** LIKE \"*modèle*\"\n",
+    "\n",
+    "##### Le *modèle* peut prendre plusieurs formes :\n",
+    "- \"M...**%**\" : affiche les éléments commençants par *M...*\n",
+    "- \"%...M\" : affiche les éléments terminants par *...M*\n",
+    "- \"M...%...N\" : affiche les éléments commançant par *M...* et terminant par *...N*\n",
+    "- \"%...M...%\" : affiche les éléments contenants *...M...*\n",
     "\n",
     "#### Enfin on peut ajouter une dernière commande à SELECT, \"**ORDER BY** *z*\" ou z peut être remplacer par la façon dont la liste sera rangée :\n",
     "- \"x\" : la liste sera rangée par ordre croissant de la colonne x (on peut également ajouter **ASC** \\ DESC)\n",
