--- a/docs/notebooks/Autre/memo_Python.ipynb
+++ b/docs/notebooks/Autre/memo_Python.ipynb
@@ -762,7 +762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -781,7 +781,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
