--- a/docs/notebooks/T2/2Structure_Arborescente-Nathanael.ipynb
+++ b/docs/notebooks/T2/2Structure_Arborescente-Nathanael.ipynb
@@ -44,6 +44,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,7 +53,8 @@
     "#### 1.2.1 La famille royale britannique\n",
     "<img src=\"https://ericecmorlaix.github.io/img/SA_windsor.png\" width='60%' />\n",
     "\n",
-    "Redessinez de manière plus schématique cet arbre. Pour quelle raison cet arbre a-t-il été modifié par rapport à sa version orginale (voir [ici](https://i.pinimg.com/originals/e8/d1/c7/e8d1c7b2834ce2c368848cf7fc91a057.jpg ) ), qui laissait apparaître les parents de chaque enfant ?\n",
+    "Redessinez de manière plus schématique cet arbre. Pour quelle raison cet arbre a-t-il été modifié par rapport à sa version orginale (voir [ici](https://i.pinimg.com/originals/e8/d1/c7/e8d1c7b2834ce2c368848cf7fc91a057.jpg ) ), qui laissait apparaître les parents de chaque enfant ?  \n",
+    "De manière à ce que chaque fils n'est qu'un seul père (modèle de la structure arborescente).\n",
     "\n",
     "#### 1.2.2 Le DOM d'une page web\n",
     "DOM : Document Object Model\n",
