--- a/docs/notebooks/T2/2Structure_Arborescente-Nathanael.ipynb
+++ b/docs/notebooks/T2/2Structure_Arborescente-Nathanael.ipynb
@@ -65,7 +65,8 @@
     "<img src=\"https://ericecmorlaix.github.io/img/SA_arbo-unix.gif\" width='40%' />\n",
     "\n",
     "#### 1.2.4 Exercice\n",
-    "Quelque part à l'intérieur des dossiers contenus dans l'archive [dossiers.zip](https://ericecmorlaix.github.io/img/SA_dossiers.zip) se trouve un fichier ```tresor.txt```. Quel secret renferme-t-il ?\n",
+    "Quelque part à l'intérieur des dossiers contenus dans l'archive [dossiers.zip](https://ericecmorlaix.github.io/img/SA_dossiers.zip) se trouve un fichier ```tresor.txt```. Quel secret renferme-t-il ?  \n",
+    "https://fr.wikipedia.org/wiki/Arbre_binaire  \n",
     "\n",
     "Attention, cette recherche est à faire uniquement en ligne de commande :\n",
     "- ```ls``` : pour lister les dossiers et fichiers d'un répertoire\n",
@@ -261,36 +262,55 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2.6 Exercice 1\n",
     "\n",
-    "![](https://ericecmorlaix.github.io/img/SA_exo_parcours.png)\n",
-    "\n",
-    "Donner le rendu de chaque parcours :\n",
-    "1. Parcours en largeur \n",
-    "2. Parcours préfixe\n",
-    "3. Parcours infixe\n",
-    "4. Parcours postfixe\n",
-    "\n",
-    "\n"
+    "![](https://ericecmorlaix.github.io/img/SA_exo_parcours.png)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Donner le rendu de chaque parcours :\n",
+    "1. Parcours en largeur  \n",
+    "1-2-3-4-5-6-7-8-9\n",
+    "2. Parcours préfixe  \n",
+    "1-2-4-5-7-8-3-6-9\n",
+    "3. Parcours infixe  \n",
+    "4-2-7-5-8-1-3-9-6\n",
+    "4. Parcours postfixe  \n",
+    "4-7-8-5-2-9-6-3-1"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2.7 Exercice 2\n",
     "\n",
-    "![](https://ericecmorlaix.github.io/img/SA_exo_2.png)\n",
-    "\n",
+    "![](https://ericecmorlaix.github.io/img/SA_exo_2.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Donner le rendu de chaque parcours :\n",
-    "1. Parcours en largeur \n",
-    "2. Parcours préfixe\n",
-    "3. Parcours infixe\n",
-    "4. Parcours postfixe\n",
-    "\n"
+    "1. Parcours en largeur  \n",
+    "9-8-7-6-2-5-1-4-3\n",
+    "2. Parcours préfixe  \n",
+    "9-8-6-2-1-7-5-4-3\n",
+    "3. Parcours infixe  \n",
+    "6-8-1-2-9-7-4-5-3\n",
+    "4. Parcours postfixe  \n",
+    "6-1-2-8-4-3-5-7-9"
    ]
   },
   {
@@ -306,9 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Arbre' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a \u001b[39m=\u001b[39m Arbre(\u001b[39m4\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Arbre' is not defined"
+     ]
+    }
+   ],
    "source": [
     "a = Arbre(4) # pour créer l'arbre dont le nœud a pour valeur 4,\n",
     "             # et dont les sous-arbres gauche et droit sont None"
@@ -382,9 +414,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![](docs/notebooks/T2/arbre.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1250,7 +1285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
