--- a/docs/notebooks/T2/2Exercice1-Nathanael.ipynb
+++ b/docs/notebooks/T2/2Exercice1-Nathanael.ipynb
@@ -34,8 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) 12-13-15-val-18-19-21-23-32  \n",
-    "b) 12-13-val-15-21-19-32-23-18"
+    "a. 12-13-15-val-18-19-21-23-32  \n",
+    "b. 12-13-val-15-21-19-32-23-18"
    ]
   },
   {
@@ -47,9 +47,41 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "a.  \n",
+    "![](https://github.com/Naellll/Classeur_TNSI/blob/main/docs/images/arbre3.PNG?raw=true)  \n",
+    "b.  \n",
+    "racine = Noeud(18)  \n",
+    "racine.insere_tout([15, 16, 13, 12, 23, 32, 19, 21])  \n",
+    "c.  \n",
+    "Bloc 3 (19 > 18) -> Bloc 2 (19 < 23) -> Bloc 1 (19 déjà inséré)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recherche(self, v):\n",
+    "    if self is None:\n",
+    "        return False\n",
+    "    elif self.v ==  v:\n",
+    "        return True\n",
+    "    else :\n",
+    "        return recherche(self.ag, v) or recherche(self.ad(), v)"
+   ]
   }
  ],
  "metadata": {
