--- a/docs/notebooks/Autre/Exercices/Exercice1_arbre-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice1_arbre-Nathanael.ipynb
@@ -34,8 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. 12-13-15-val-18-19-21-23-32  \n",
-    "b. 12-13-val-15-21-19-32-23-18"
+    "a. 12-13-15-16-18-19-21-23-32  \n",
+    "b. 12-13-16-15-21-19-32-23-18"
    ]
   },
   {
@@ -61,11 +61,61 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### 4)"
+    "class Noeud():\n",
+    "    def __init__(self, v):\n",
+    "        self.ag = None\n",
+    "        self.ad = None\n",
+    "        self.v = v\n",
+    "\n",
+    "    def insere(self, v):\n",
+    "        n = self\n",
+    "        est_insere = False\n",
+    "        while not est_insere :\n",
+    "            if v == n.v:\n",
+    "                est_insere = True\n",
+    "            elif v < n.v:\n",
+    "                if n.ag != None:\n",
+    "                    n = n.ag\n",
+    "                else:\n",
+    "                    n.ag = Noeud(v)\n",
+    "                    est_insere = True\n",
+    "            else:\n",
+    "                if n.ad != None:\n",
+    "                    n = n.ad\n",
+    "                else:\n",
+    "                    n.ad = Noeud(v)\n",
+    "                    est_insere = True\n",
+    "\n",
+    "    def insere_tout(self, vals):\n",
+    "        for v in vals:\n",
+    "            self.insere(v)\n",
+    "\n",
+    "\n",
+    "    # Exercice 4 :\n",
+    "\n",
+    "    def recherche_iterative(self, v):\n",
+    "        present = False\n",
+    "        while not self is None:\n",
+    "            if v == self.v:\n",
+    "                present = True\n",
+    "            if v < self.v:\n",
+    "                self = self.ag\n",
+    "            else:\n",
+    "                self = self.ad\n",
+    "        return present\n",
+    "    \n",
+    "    # def recherche(self, v):\n",
+    "    #     if self is None:\n",
+    "    #         return False\n",
+    "    #     elif self.v ==  v:\n",
+    "    #         return True\n",
+    "    #     else :\n",
+    "    #         return self.ag.recherche(v) or self.ad.recherche(v)"
    ]
   },
   {
@@ -74,13 +124,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recherche(self, v):\n",
-    "    if self is None:\n",
-    "        return False\n",
-    "    elif self.v ==  v:\n",
-    "        return True\n",
-    "    else :\n",
-    "        return recherche(self.ag, v) or recherche(self.ad(), v)"
+    "racine = Noeud(18)\n",
+    "racine.insere_tout([12, 13, 15, 16, 19, 21, 32, 23])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "racine.recherche_iterative(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "racine.recherche(16)"
    ]
   }
  ],
@@ -91,8 +154,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
