--- a/docs/notebooks/Autre/Exercices/Exercices_bac_blanc-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercices_bac_blanc-Nathanael.ipynb
@@ -1,11 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercice 3 :\n",
+    "\n",
+    "### 1)\n",
+    "a. Non elle ne pourrait pas car cela pourrait poser problème si plusieurs joueurs avait le même nom or le but d'une clé primaire est qu'elle soit distincte de toute les autres.  \n",
+    "b. id_liscencie  \n",
+    "### 2)\n",
+    "a. Cette commande renvoie les nom et prénoms des joueurs de l'équipe -12 ans présents dans la table liscencies.  \n",
+    "b. Une étoile renverrais l'intégralité des informations concernant l'équipe -12 ans de la table liscencies.\n",
+    "c. SELECT date FROM matchs WHERE lieu = \"Domicile\"\n",
+    "### 3)\n",
+    "INSERT INTO liscencies (id_licencie, prenom, nom , annee_naissance , equipe ) VALUES(valeur1, valeur2)"
+   ]
   }
  ],
  "metadata": {
@@ -15,8 +26,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
