--- a/docs/notebooks/Autre/Exercices/Exercices_bac_blanc-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercices_bac_blanc-Nathanael.ipynb
@@ -15,7 +15,9 @@
     "b. Une étoile renverrais l'intégralité des informations concernant l'équipe -12 ans de la table liscencies.\n",
     "c. SELECT date FROM matchs WHERE lieu = \"Domicile\"\n",
     "### 3)\n",
-    "INSERT INTO liscencies (id_licencie, prenom, nom , annee_naissance , equipe ) VALUES(valeur1, valeur2)"
+    "INSERT INTO liscencies (id_licencie, prenom, nom , annee_naissance , equipe) VALUES (287, \"Jean\", \"Lavenu\", 2001, \"Hommes 2\")\n",
+    "### 4)\n",
+    "UPDATE liscencies SET equipe = \"Vétérans\" WHERE prenom = \"Joseph\" AND nom = \"Cuviller\""
    ]
   }
  ],
