avancée notebooks SoC

--- a/docs/notebooks/T2/3SoC_Processus-Nathanael.ipynb
+++ b/docs/notebooks/T2/3SoC_Processus-Nathanael.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,32 +13,24 @@
     "\n",
     "- **Donner** la signification de l'acronyme **SoC** :\n",
     "\n",
-    "    ...\n",
+    "SoC correspond à System on a Chip ou Système sur Puce.  \n",
     "    \n",
     "    \n",
-    "- **Lister** les avantages et inconvénients d'un **SoC** :\n",
-    "\n",
-    "    ...\n",
-    "    \n",
-    "    ...  \n",
-    "    \n",
-    "    ...  \n",
-    "    \n",
+    "- **Lister** les avantages et inconvénients d'un **SoC** :  \n",
+    "  \n",
+    "+Moins grande consommation  \n",
+    "+Pas de refroidissement -> silencieux  \n",
+    "+Meilleures performences  \n",
+    "-Pas de mise à jour materiel\n",
     "    \n",
     "- **Faire** des recherches sur le Soc BCM2711 qui équipe les Raspberry PI4, notez les principales caractéristiques de ce **SoC** :\n",
     "\n",
-    "    ...\n",
+    "Il est plus puissant, il suporte le 64 bits, il est 3x plus puissant que le PI3.\n",
     "    \n",
     "        \n",
     "- **Interroger** en lignes de commande différents appareils pour connaitre les caractéristiques de leur **SoC** :\n",
     "\n",
-    "    ...\n",
-    "    \n",
-    "    ...  \n",
-    "    \n",
-    "    ...  \n",
-    "           \n",
-    "    ... \n",
+    "...\n",
     "\n",
     "<h3 class='fa fa-graduation-cap' style=\"color: darkorange\"> A faire vous même n°2 :</h3>\n",
     "\n",
@@ -51,7 +44,7 @@
     "        \n",
     "- **Calculer** combien d’opérations peut réaliser un processeur(single-core) à 3,2 GHZ en une seconde ?\n",
     "\n",
-    "  ...\n",
+    "3.2 milliards\n",
     "    \n",
     "\n",
     "<h3 class='fa fa-graduation-cap' style=\"color: tomato\"> A faire vous même n°3 :</h3>\n",
@@ -86,11 +79,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'coretemp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m tempsinfos\u001b[39m=\u001b[39mpsutil\u001b[39m.\u001b[39msensors_temperatures()\n\u001b[1;32m      6\u001b[0m \u001b[39m# print(tempsinfos)\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m t\u001b[39m=\u001b[39mtempsinfos[\u001b[39m\"\u001b[39m\u001b[39mcoretemp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mcurrent\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mtempérature du coeur 0 :\u001b[39m\u001b[39m\"\u001b[39m, t)\n\u001b[1;32m      9\u001b[0m sleep(n)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'coretemp'"
+     ]
+    }
+   ],
+   "source": [
+    "from time import sleep\n",
+    "import psutil\n",
+    "n=int(input(\"période\"))\n",
+    "while True:\n",
+    "    tempsinfos=psutil.sensors_temperatures()\n",
+    "    # print(tempsinfos)\n",
+    "    t=tempsinfos[\"coretemp\"][0].current\n",
+    "    print(\"température du coeur 0 :\", t)\n",
+    "    sleep(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre programme"
+    "# Votre programme\n",
+    "import psutil\n"
    ]
   },
   {
@@ -222,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
