Notebook SoC à peu près fini

--- a/docs/notebooks/T2/3SoC_Processus-Nathanael.ipynb
+++ b/docs/notebooks/T2/3SoC_Processus-Nathanael.ipynb
@@ -79,41 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'coretemp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m tempsinfos\u001b[39m=\u001b[39mpsutil\u001b[39m.\u001b[39msensors_temperatures()\n\u001b[1;32m      6\u001b[0m \u001b[39m# print(tempsinfos)\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m t\u001b[39m=\u001b[39mtempsinfos[\u001b[39m\"\u001b[39m\u001b[39mcoretemp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mcurrent\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mtempérature du coeur 0 :\u001b[39m\u001b[39m\"\u001b[39m, t)\n\u001b[1;32m      9\u001b[0m sleep(n)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'coretemp'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
      ]
     }
    ],
    "source": [
-    "from time import sleep\n",
-    "import psutil\n",
-    "n=int(input(\"période\"))\n",
-    "while True:\n",
-    "    tempsinfos=psutil.sensors_temperatures()\n",
-    "    # print(tempsinfos)\n",
-    "    t=tempsinfos[\"coretemp\"][0].current\n",
-    "    print(\"température du coeur 0 :\", t)\n",
-    "    sleep(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Votre programme\n",
-    "import psutil\n"
+    "import psutil\n",
+    "tempsinfos=psutil.sensors_temperatures()\n",
+    "print(tempsinfos)"
    ]
   },
   {
@@ -162,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,20 +161,15 @@
     "\n",
     "Si les processus sont exécutés l’un après l’autre, d’abord P1 puis P2 et enfin P3 y-a-t-il interblocage?\n",
     "\n",
-    "    ...\n",
-    "    \n",
-    "    ...  \n",
+    "Non car toutes les ressources utilisées sont libérées avant l'execution du processus suivant.\n",
     "    \n",
     "\n",
     "Décrire une exécution des 3 processus qui conduit à une situation d’interblocage :\n",
     "\n",
-    "    ...\n",
-    "    \n",
-    "    ...  \n",
-    "    \n",
-    "    ...  \n",
-    "           \n",
-    "    ... "
+    "P1 : demande R1,  \n",
+    "P2 : demande R2,  \n",
+    "P3 : demande R3,  \n",
+    "La situation est bloquée car les trois processus ont besoin d'une ressource utilisée par un autre processus."
    ]
   },
   {
@@ -245,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
   },
   "toc": {
    "base_numbering": 1,
