--- a/docs/notebooks/Autre/Exercices/Exercice_routage-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_routage-Nathanael.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1)\n",
+    "### 1)\n",
     "Table de G :\n",
     "|Destinataire|Passerelle|Coût|\n",
     "|-|-|-|\n",
@@ -31,19 +31,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2)\n",
-    "a. Non\n",
-    "b. Oui\n",
-    "c. ?\n",
-    "d. "
+    "### 2)\n",
+    "a. Non  \n",
+    "b. Oui  \n",
+    "c. ?  \n",
+    "d.  \n",
+    "![](https://github.com/Naellll/Classeur_TNSI/blob/main/docs/images/arbre_routage.PNG?raw=true)  \n",
+    "e. Table de A :\n",
+    "|Destinataire|Passerelle|Coût|\n",
+    "|-|-|-|\n",
+    "|B|B|1|\n",
+    "|C|C|1|\n",
+    "|D|B|2|\n",
+    "|E|C|2|\n",
+    "|F|C|3|\n",
+    "|G|C|3|\n",
+    "|H|C|2|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3)\n"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
