exercice routage fini

--- a/docs/notebooks/Autre/Exercices/Exercice_routage-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_routage-Nathanael.ipynb
@@ -54,7 +54,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3)\n"
+    "### 3)\n",
+    "f.  \n",
+    "![](https://github.com/Naellll/Classeur_TNSI/blob/main/docs/images/arbre_routage2.PNG?raw=true)  \n",
+    "g. Table de A :\n",
+    "|Destinataire|Passerelle|Coût|\n",
+    "|-|-|-|\n",
+    "|B|B|4|\n",
+    "|C|B|6|\n",
+    "|D|E|11|\n",
+    "|E|E|5|\n",
+    "|F|E|8|\n",
+    "\n",
+    "Table de D :\n",
+    "|Destinataire|Passerelle|Coût|\n",
+    "|-|-|-|\n",
+    "|A|F|11|\n",
+    "|B|F|9|\n",
+    "|C|C|7|\n",
+    "|E|F|6|\n",
+    "|F|F|3|"
    ]
   }
  ],
