--- a/docs/notebooks/Autre/Exercices/Exercice1_arbre-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice1_arbre-Nathanael.ipynb
@@ -51,6 +51,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "```mermaid\n",
+    "graph TD\n",
+    "    18((18)) --- 12((12))\n",
+    "    18 --- 19((19))\n",
+    "    12 --- 1( )\n",
+    "    12 --- 13((13))\n",
+    "    13 --- 2( )\n",
+    "    13 --- 15((15))\n",
+    "    15 --- 3( )\n",
+    "    15 --- 16((16))\n",
+    "    19 --- 4( )\n",
+    "    19 --- 21((21))\n",
+    "    21 --- 5( )\n",
+    "    21 --- 32((32))\n",
+    "    32 --- 23((23))\n",
+    "    32 --- 6( )\n",
+    "    linkStyle 2 stroke-width:0px\n",
+    "    style 1 opacity:0\n",
+    "    linkStyle 4 stroke-width:0px\n",
+    "    style 2 opacity:0\n",
+    "    linkStyle 6 stroke-width:0px\n",
+    "    style 3 opacity:0\n",
+    "    linkStyle 8 stroke-width:0px\n",
+    "    style 4 opacity:0\n",
+    "    linkStyle 10 stroke-width:0px\n",
+    "    style 5 opacity:0\n",
+    "    linkStyle 13 stroke-width:0px\n",
+    "    style 6 opacity:0\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```mermaid\n",
+    "graph TD;\n",
+    "    A((A)) --- B((B));\n",
+    "    A --- C((C));\n",
+    "    B --- D((D));\n",
+    "    B --- E( );\n",
+    "    D --- F((F));\n",
+    "    D --- G((G));\n",
+    "    C --- H( );\n",
+    "    C --- I((I));\n",
+    "    linkStyle 3 stroke-width:0px;\n",
+    "    linkStyle 6 stroke-width:0px;\n",
+    "    style E opacity:0;\n",
+    "    style H opacity:0;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "a.  \n",
     "![](https://github.com/Naellll/Classeur_TNSI/blob/main/docs/images/arbre3.PNG?raw=true)  \n",
     "b.  \n",
