--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -5,6 +5,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sujet n°01 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def verifie(tab):\n",
+    "    trier = True\n",
+    "    for i in range(len(tab)-1):\n",
+    "        if tab[i] <= tab[i+1]:\n",
+    "            trier = trier and True\n",
+    "        else:\n",
+    "            trier = trier and False\n",
+    "    return trier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def depouille(urne):\n",
+    "    resultat = {}\n",
+    "    for bulletin in urne:\n",
+    "        if bulletin in resultat:\n",
+    "            resultat[bulletin] = resultat[bulletin] + 1\n",
+    "        else:\n",
+    "            resultat[bulletin]=1\n",
+    "    return resultat\n",
+    "\n",
+    "def vainqueur(election):\n",
+    "    vainqueur = '' #cette variable ne sert Ã  rien\n",
+    "    nmax = 0\n",
+    "    for candidat in election:\n",
+    "        if election[candidat] > nmax :\n",
+    "            nmax = election[candidat]\n",
+    "            vainqueur = candidat #cette ligne ne sert Ã  rien !\n",
+    "    liste_finale = [nom for nom in election if election[nom] == nmax]\n",
+    "    return liste_finale"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°02 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def indices_maxi(tab):\n",
+    "    indices = []\n",
+    "    maxi = tab[0]\n",
+    "    for i in range(len(tab)):\n",
+    "        if tab[i] > maxi:\n",
+    "            maxi = tab[i]\n",
+    "    for i in range(len(tab)):\n",
+    "        if tab[i] == maxi:\n",
+    "            indices.append(i)\n",
+    "    return (maxi, indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7, [0])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sujet n°09 :"
    ]
   },
@@ -34,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,15 +164,15 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chercher([\u001b[39m1\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m12\u001b[39m], \u001b[39m7\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m5\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [6], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [6], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [6], line 11\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[0;32m---> 11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n\u001b[1;32m     12\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m m\n",
-      "Cell \u001b[0;32mIn [6], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [6], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
+      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chercher([\u001b[39m1\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m12\u001b[39m], \u001b[39m7\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m5\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
+      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
+      "Cell \u001b[0;32mIn [1], line 11\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[0;32m---> 11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n\u001b[1;32m     12\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m m\n",
+      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
+      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
       "    \u001b[0;31m[... skipping similar frames: chercher at line 9 (2966 times)]\u001b[0m\n",
-      "Cell \u001b[0;32mIn [6], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [6], line 3\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mchercher\u001b[39m(tab, n, i, j):\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mif\u001b[39;00m i \u001b[39m<\u001b[39;49m \u001b[39m0\u001b[39;49m \u001b[39mor\u001b[39;00m j \u001b[39m>\u001b[39m \u001b[39mlen\u001b[39m(tab):\n\u001b[1;32m      4\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[39melif\u001b[39;00m i \u001b[39m>\u001b[39m j:\n",
+      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
+      "Cell \u001b[0;32mIn [1], line 3\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mchercher\u001b[39m(tab, n, i, j):\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mif\u001b[39;00m i \u001b[39m<\u001b[39;49m \u001b[39m0\u001b[39;49m \u001b[39mor\u001b[39;00m j \u001b[39m>\u001b[39m \u001b[39mlen\u001b[39m(tab):\n\u001b[1;32m      4\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[39melif\u001b[39;00m i \u001b[39m>\u001b[39m j:\n",
       "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
      ]
     }
@@ -99,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
